feat(docs): convert pages with component to .mdx extension

--- a/docs/cli/commands.mdx
+++ b/docs/cli/commands.mdx
@@ -4,13 +4,9 @@ description: Below are the available LogChimp CLI commands. You can always run `
 slug: /docs/cli/commands
 ---
 
-<!-- components -->
-
-import Blockquote from "@/components/Blockquote"
-
-<Blockquote type="tip">
+<Alert type="tip">
   Each command is documented in detail on its own page.
-</Blockquote>
+</Alert>
 
 - [logchimp help](/docs/cli/help)
 
