--- a/docs/config.mdx
+++ b/docs/config.mdx
@@ -4,12 +4,9 @@ description: Step by step guide for you to configure LogChimp site using `logchi
 slug: /docs/config
 ---
 
-<!-- components -->
-import Blockquote from "@/components/Blockquote"
-
-<Blockquote type="warning">
-NOTE: The documentation is very new and may contain some gaps, please help us fill them in by opening issues or better yet, pull-requests when you think something could be explained better.
-</Blockquote>
+<Alert type="tip" title="Help us improve!">
+**NOTE:** The documentation is very new and may contain some gaps, please help us fill them in by opening issues or better yet, pull-requests when you think something could be explained better.
+</Alert>
 
 ## Overview
 
@@ -27,9 +24,9 @@ LogChimp supports three environments: **development**, **testing**, **production
 
 There are number of options which are explained in detail below.
 
-<Blockquote type="alert">
+<Alert type="error">
 The configuration below is just an example and not recommended for production use.
-</Blockquote>
+</Alert>
 
 ```json lines
 {
