--- a/docs/install/docker.mdx
+++ b/docs/install/docker.mdx
@@ -4,14 +4,11 @@ description: Install LogChimp via Docker
 slug: /docs/install/docker
 ---
 
-<!-- components -->
-import Blockquote from "@/components/Blockquote"
-
 [LogChimp docker image](https://github.com/orgs/logchimp/packages/container/package/logchimp) is an official package maintained by core team.
 
-<Blockquote type="warning">
+<Alert type="warning">
   Experience with [Docker Compose](https://docs.docker.com/compose/) is required.
-</Blockquote>
+</Alert>
 
 If `Docker` or `Docker Compose` is not installed on your machine/server, refer to [Docker Compose](https://docs.docker.com/engine/install/) installation docs.
 
