--- a/docs/install/gitpod.mdx
+++ b/docs/install/gitpod.mdx
@@ -4,12 +4,9 @@ description: Want to give a quick spin to LogChimp?
 slug: /docs/install/gitpod
 ---
 
-<!-- components -->
-import Blockquote from "@/components/Blockquote"
-
-<Blockquote type="alert">
+<Alert type="error">
   It's not recommended to use Gitpod for production usage.
-</Blockquote>
+</Alert>
 
 You can click the "Open in Gitpod" button to get started.
 
