--- a/docs/install/readme.mdx
+++ b/docs/install/readme.mdx
@@ -4,9 +4,8 @@ description: This will help you get started with LogChimp and start collecting f
 slug: /docs/install
 ---
 
-<!-- components -->
-import SelfhostInstall from "@/components/SelfhostInstall"
-import CloudHosting from "@/components/CloudHosting"
+import { SelfhostInstall } from "../../../src/components/Marketing/SelfhostInstall.tsx"
+import { CloudHosting } from "../../../src/components/Marketing/CloudHosting.tsx"
 
 LogChimp is open-source, fast, flexible, and reliable software that is ideal for capturing user feedback and informing product choices.
 
