--- a/docs/install/render.mdx
+++ b/docs/install/render.mdx
@@ -4,10 +4,6 @@ description: A full guide for running LogChimp on Render with a click of a butto
 slug: /docs/install/render
 ---
 
-<!-- components -->
-
-import Blockquote from "@/components/Blockquote"
-
 ## TOC
 
 - v0.6
@@ -20,9 +16,9 @@ Clicking on "Deploy to Render" button will redirect you to confirmation page.
 
 ![Render deploy confirmation page](../images/docs/render-deploy-confirmation.png)
 
-<Blockquote type="tip">
+<Alert type="tip">
   Please review the changes before deploying the following services.
-</Blockquote>
+</Alert>
 
 Click "apply" button, 🎉 Voilà!
 
@@ -56,8 +52,8 @@ Click "Add rule", enter `/api/*` as source, and paste your **logchimp-api** URL 
 
 ![Render services redirect section](../images/docs/render-services-redirect-section.png)
 
-<Blockquote type="warning">
+<Alert type="warning">
   Make sure /api/* source is at top
-</Blockquote>
+</Alert>
 
 Click "Save Changes".
