--- a/docs/install/docker.mdx
+++ b/docs/install/docker.mdx
@@ -66,7 +66,7 @@ After running these command successfully, you can access your LogChimp site at `
 
 Here's an LogChimp Docker image structure for you to understand _(if you're curious)_, what's happening behind the scenes.
 
-![LogChimp Docker image structure](../images/docs/logchimp-docker-structure.png)
+![LogChimp Docker image structure](../../images/docs/install/docker/deployment-structure.png)
 
 ### Resources
 
