--- a/docs/install/render.mdx
+++ b/docs/install/render.mdx
@@ -14,7 +14,7 @@ Clicking on "Deploy to Render" button will redirect you to confirmation page.
 
 [![Deploy to Render](https://render.com/images/deploy-to-render-button.svg)](https://render.com/deploy?repo=https://github.com/logchimp/deploy-buttons)
 
-![Render deploy confirmation page](../images/docs/render-deploy-confirmation.png)
+![Render deploy confirmation page](../../images/docs/install/render/deploy-confirmation.png)
 
 <Alert type="tip">
   Please review the changes before deploying the following services.
@@ -28,15 +28,17 @@ Click "apply" button, 🎉 Voilà!
 
 Now, the deployed services needs to be connected together.
 
+![Deployed service](../../images/docs/install/render/services-deploy-preview.png)
+
 On your machine, you need to use logchimp-cli tool to [generate configuration](/docs/cli/config/generate).
 
 In your Render dashboard, open **logchimp-api**, go to Environment tab, scroll to Secret Files section.
 
-![Render services secret file section](../images/docs/render-secret-file-section.png)
+![Render services secret file section](../../images/docs/install/render/secret-file-section.png)
 
 Click "Add Secret File", at filename enter `logchimp.config.json`, paste the logchimp configuration in Contents.
 
-![Render secret file contents preview](../images/docs/render-secret-file-content-preview.png)
+![Render secret file contents preview](../../images/docs/install/render/secret-file-content-preview.png)
 
 Click "Save", scroll to top.
 
@@ -50,7 +52,7 @@ Open **logchimp-client**, go to Redriects/Rewrites tab.
 
 Click "Add rule", enter `/api/*` as source, and paste your **logchimp-api** URL as destination `https://logchimp-api.onrender.com/api*`.
 
-![Render services redirect section](../images/docs/render-services-redirect-section.png)
+![Render services redirect section](../../images/docs/install/render/services-redirect-section.png)
 
 <Alert type="warning">
   Make sure /api/* source is at top
