--- a/docs/readme.mdx
+++ b/docs/readme.mdx
@@ -4,7 +4,9 @@ description: Learn how to setup, customize and run a LogChimp site successfully.
 slug: /docs/
 ---
 
-> NOTE: The documentation is very new and may contain some gaps, please help us fill them in by opening issues or better yet, pull-requests when you think something could be explained better.
+<Alert type="tip" title="Help us improve!">
+**NOTE:** The documentation is very new and may contain some gaps, please help us fill them in by opening issues or better yet, pull-requests when you think something could be explained better.
+</Alert>
 
 LogChimp is an open-source software to capture your customers feedback and inform your product decisions.
 
