fix(docs): heading hierarchy

--- a/docs/install/readme.mdx
+++ b/docs/install/readme.mdx
@@ -13,13 +13,13 @@ LogChimp is open-source, fast, flexible, and reliable software that is ideal for
 
 There are a few ways listed below for setting up a LogChimp site.
 
-#### Self-hosting
+### Self-hosting
 
 If you're running a self-hosted instance, we strongly recommend an Ubuntu server with at least 1GB of memory to run LogChimp.
 
 <SelfhostInstall />
 
-#### Cloud hosting
+### Cloud hosting
 
 You can also use **one click** deploy button to get started with LogChimp immediately.
 
