--- a/docs/install/render.mdx
+++ b/docs/install/render.mdx
@@ -8,7 +8,7 @@ slug: /docs/install/render
 
 - v0.6
 
-### v0.6
+## v0.6
 
 Clicking on "Deploy to Render" button will redirect you to confirmation page.
 
@@ -24,7 +24,7 @@ Click "apply" button, 🎉 Voilà!
 
 ## Configuration
 
-#### logchimp-api
+### logchimp-api
 
 Now, the deployed services needs to be connected together.
 
