--- a/docs/install/docker.mdx
+++ b/docs/install/docker.mdx
@@ -1,14 +1,11 @@
 ---
 title: Docker
-description: Install LogChimp via Docker
+description: Install LogChimp using Docker Compose
+icon: Container
 slug: /docs/install/docker
 ---
 
-The [LogChimp docker image](https://github.com/orgs/logchimp/packages/container/package/logchimp) is an official package maintained by the core team.
-
-<Alert type="warning">
-  Experience with [Docker Compose](https://docs.docker.com/compose/) is required.
-</Alert>
+The [Docker Compose Community](https://github.com/logchimp/logchimp/blob/master/docker/community/docker-compose.yml) is officially maintained by the core team.
 
 If `Docker` or `Docker Compose` is not installed on your machine/server, refer to the [Docker Compose](https://docs.docker.com/engine/install/) installation docs.
 
