--- a/docs/install/railway.mdx
+++ b/docs/install/railway.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to deploy LogChimp on Railway?
+title: Railway
 description: Guide to deploying your LogChimp site successfully on Railway
 slug: /docs/install/railway
 ---
