--- a/docs/install/render.mdx
+++ b/docs/install/render.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to deploy LogChimp on Render?
+title: Render
 description: A comprehensive guide for deploying LogChimp on Render with just a click.
 slug: /docs/install/render
 ---
