--- a/docs/install/ubuntu.mdx
+++ b/docs/install/ubuntu.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to Install LogChimp on Ubuntu?
+title: Ubuntu
 description: Learn how to install LogChimp on Ubuntu for production use.
 slug: /docs/install/ubuntu
 ---
