--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,5 +1,5 @@
 ---
-title: Documentation
+title: Introduction
 description: Learn how to set up, customize, and run a LogChimp site successfully.
 icon: FileText
 ---
@@ -17,11 +17,3 @@ LogChimp is an open-source software for capturing your customers' feedback and i
 - Learn more about LogChimp's architecture and key features.
 - [Set up LogChimp](/docs/install) on your own servers.
 - We would love to see your contributions to LogChimp. Get more information on [how to contribute](/docs/contributing).
-
-### Background
-
-LogChimp was created by [Yashu Mittal](https://twitter.com/mittalyashu77) in [early 2020](https://github.com/logchimp/logchimp/commit/fb7190a4aa8e1da9ec977dd1d4c8dfab9d536be4) with the idea of building an open-source tool for collecting user feedback.
-
-While other service providers charge their customers anywhere from $50/mo to $200/mo based on the number of tracked users, it can become quite expensive as your user base grows.
-
-The intention was to build a tool that can cater to startups as well as enterprises, and hence the entire LogChimp codebase is open-source [on GitHub](https://github.com/logchimp/logchimp).
