--- a/guide/boards/index.mdx
+++ b/guide/boards/index.mdx
@@ -1,10 +1,9 @@
 ---
-title: Boards
+title: Overview
 description: Organise your customers feedback with boards
-slug: /guide/boards
 ---
 
-import BoardImage from "../images/guide/boards.webp"
+import BoardImage from "../../images/guide/boards.webp"
 
 <img src={BoardImage} alt="Boards" className="rounded-2xl border" />
 
