--- a/guide/dashboard/index.mdx
+++ b/guide/dashboard/index.mdx
@@ -1,14 +1,14 @@
 ---
 title: Overview
-slug: /guide/dashboard/
+icon: PanelsTopLeft
 ---
 
 import DashboardImage from "../../images/guide/dashboard.webp"
 
-<img src={DashboardImage} alt="Dashboard" className="rounded-2xl border" />
+<img src={DashboardImage} alt="Dashboard" className="rounded-2xl border"/>
 
 The dashboard is your home in LogChimp and where all the post, board, roadmap and interactions live. Within dashboard, you can create boards, manage roadmap, assigning roles and more.
 
 <Alert type="warning">
-**NOTE:** You need to have `dashboard:read` permission to access the dasboard.
+	**NOTE:** You need to have `dashboard:read` permission to access the dashboard.
 </Alert>
