--- a/guide/roadmaps/index.mdx
+++ b/guide/roadmaps/index.mdx
@@ -1,10 +1,9 @@
 ---
-title: Roadmaps
+title: Overview
 description: Keep your customers and team on same page with roadmaps.
-slug: /guide/roadmaps
 ---
 
-import RoadmapImage from "../images/guide/roadmaps.webp"
+import RoadmapImage from "../../images/guide/roadmaps.webp"
 
 <img src={RoadmapImage} alt="Roadmap" className="rounded-2xl border" />
 
