--- a/docs/environment-variables.mdx
+++ b/docs/environment-variables.mdx
@@ -1,6 +1,7 @@
 ---
 title: Environment Variables
 description: All environment variables used in the LogChimp.
+icon: SquareAsterisk
 ---
 
 Deployment with [one-click deploy](/docs/install) buttons by-default pre-fills most of the environment variables during the deployment process; only a few of the environment variables need to be configured manually, such as secret credentials.
