--- a/guide/boards/index.mdx
+++ b/guide/boards/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Overview
-description: Organise your customers feedback with boards
+description: Organize your customers feedback with boards
 ---
 
 import BoardImage from "../../images/guide/boards.webp"
@@ -9,7 +9,8 @@ import BoardImage from "../../images/guide/boards.webp"
 
 ## Overview
 
-Boards can set as **public** or **private**. Public boards are visible in your LogChimp site and anyone on the internet.
+Boards can be **public** or **private**.
+Public boards are visible on your LogChimp site and can be seen by anyone on the internet.
 
 ## Configure
 
