--- a/guide/dashboard/index.mdx
+++ b/guide/dashboard/index.mdx
@@ -7,7 +7,7 @@ import DashboardImage from "../../images/guide/dashboard.webp"
 
 <img src={DashboardImage} alt="Dashboard" className="rounded-2xl border"/>
 
-The dashboard is your home in LogChimp and where all the post, board, roadmap and interactions live. Within dashboard, you can create boards, manage roadmap, assigning roles and more.
+The dashboard is your home in LogChimp and where all the post, board, roadmap and interactions live. Within the dashboard, you can create boards, manage roadmap, assign roles and more.
 
 <Alert type="warning">
 	**NOTE:** You need to have `dashboard:read` permission to access the dashboard.
