--- a/guide/index.mdx
+++ b/guide/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Guide
-description: Get an overview of LogChimp's features, and how to use them.
+description: Get an overview of LogChimp's features and how to use them.
 ---
 
 Your LogChimp site is the go-to place for collecting your customers feedback. Within the LogChimp site you can create [boards](/guide/boards), [roadmaps](/guide/roadmaps), [roles](/guide/roles) and more.
