--- a/guide/posts/index.mdx
+++ b/guide/posts/index.mdx
@@ -7,6 +7,6 @@ import PostImage from "../../images/guide/posts.webp"
 
 <img src={PostImage} alt="Post" className="rounded-2xl border" />
 
-The most basic concept in LogCimp is the **posts**.
+The most basic concept in LogChimp is the **posts**.
 
 Posts are always tied to a specific [board](/guide/board) and required to have a title; a description is optional but recommended.
