feat(docs): use `img` tag with tag instead of importing the file

--- a/guide/boards/index.mdx
+++ b/guide/boards/index.mdx
@@ -3,9 +3,7 @@ title: Overview
 description: Organize your customers feedback with boards
 ---
 
-import BoardImage from "../../images/guide/boards.webp"
-
-<img src={BoardImage} alt="Boards" className="rounded-2xl border" />
+<img src="../../images/guide/boards.webp" alt="Boards" className="rounded-2xl border" />
 
 ## Overview
 
