--- a/guide/posts/comments.mdx
+++ b/guide/posts/comments.mdx
@@ -3,9 +3,7 @@ title: Activity & Comments
 slug: /guide/posts/comments
 ---
 
-import CommentsImage from "../../images/guide/comments.webp"
-
-<img src={CommentsImage} alt="Comments" className="rounded-2xl border" />
+<img src="../../images/guide/comments.webp" alt="Comments" className="rounded-2xl border" />
 
 ## Comments
 
