--- a/guide/posts/index.mdx
+++ b/guide/posts/index.mdx
@@ -3,9 +3,7 @@ title: Overview
 slug: /guide/posts
 ---
 
-import PostImage from "../../images/guide/posts.webp"
-
-<img src={PostImage} alt="Post" className="rounded-2xl border" />
+<img src="../../images/guide/posts.webp" alt="Post" className="rounded-2xl border" />
 
 The most basic concept in LogChimp is the **posts**.
 
