--- a/guide/roadmaps/index.mdx
+++ b/guide/roadmaps/index.mdx
@@ -3,9 +3,7 @@ title: Overview
 description: Keep your customers and team on same page with roadmaps.
 ---
 
-import RoadmapImage from "../../images/guide/roadmaps.webp"
-
-<img src={RoadmapImage} alt="Roadmap" className="rounded-2xl border" />
+<img src="../../images/guide/roadmaps.webp" alt="Roadmap" className="rounded-2xl border" />
 
 ## Overview
 
