fix: move static assets to `/public` directory

--- a/docs/install/railway.mdx
+++ b/docs/install/railway.mdx
@@ -25,11 +25,11 @@ Railway provides an easy way to generate a 32-character secret key by pressing `
 	You will need to set-up SMTP configuration to let your users get emails to reset password, account verification, notifications and more.
 </Alert>
 
-![LogChimp Railway template](../../images/docs/install/railway/01_logchimp-railway-template.png)
+![LogChimp Railway template](/images/docs/install/railway/01_logchimp-railway-template.png)
 
 Railway will automatically provision a PostgreSQL database and deploy the LogChimp API service for you.
 
-![Railway deploys LogChimp server](../../images/docs/install/railway/02_deploy-logchimp-service.png)
+![Railway deploys LogChimp server](/images/docs/install/railway/02_deploy-logchimp-service.png)
 
 ## Theme
 
@@ -48,19 +48,19 @@ Here, we'll use Vercel as an example to deploy the theme. Feel free to choose an
 
 Go to Vercel dashboard and create a new project. Select the Git provider where you cloned the LogChimp repository using Railway.
 
-![Railway template repository details](../../images/docs/install/railway/03_railway-template-repository-details.png)
+![Railway template repository details](/images/docs/install/railway/03_railway-template-repository-details.png)
 
 Search with the same repository name used in Railway and click **import**.
 
-![Vercel repository list page](../../images/docs/install/railway/04_vercel-select-repository-to-deploy.png)
+![Vercel repository list page](/images/docs/install/railway/04_vercel-select-repository-to-deploy.png)
 
 There is no requirement for any configuration. Vercel will automatically detect the framework presets and apply base configuration for deployment.
 
-![Vercel project configuration](../../images/docs/install/railway/05_vercel-project-configuration.png)
+![Vercel project configuration](/images/docs/install/railway/05_vercel-project-configuration.png)
 
 But feel free to look around and tweak the configuration accordingly and hit **Deploy**.
 
-![Vercel theme deployment completed](../../images/docs/install/railway/06_vercel-theme-deployment-completed.gif)
+![Vercel theme deployment completed](/images/docs/install/railway/06_vercel-theme-deployment-completed.gif)
 
 The last step is to add an API rewrite for your client app in your source code by creating a new file `vercel.json` in the `packages/theme` directory.
 
@@ -83,7 +83,7 @@ And there you go... 🚄
 
 Your LogChimp site is ready to accept **your customers' feedback** with ease.
 
-![LogChimp live site preview](../../images/docs/install/railway/07_logchimp-live-site-preview.png)
+![LogChimp live site preview](/images/docs/install/railway/07_logchimp-live-site-preview.png)
 
 ## FAQ
 
@@ -94,10 +94,10 @@ Currently, LogChimp doesn’t have integration with third-party services to uplo
 The trick is to directly update the LogChimp site logo URL from the database. Upload your logo to any image hosting service (for example, AWS S3 bucket) and grab the image URL.
 
 1. Go to the PostgreSQL database > Data tab > click the "settings" database table
-   ![Open settings database table from Railway UI](../../images/docs/install/railway/settings-database-table.jpg)
+   ![Open settings database table from Railway UI](/images/docs/install/railway/settings-database-table.jpg)
 
 2. Click on the first row in the "settings" table. That should open that row in edit mode.
    Paste the image URL you've copied and click the save button.
-   ![Change logo URL from settings database table](../../images/docs/install/railway/change-logo-url-from-database.jpg)
+   ![Change logo URL from settings database table](/images/docs/install/railway/change-logo-url-from-database.jpg)
 
 [^1]: The above link contains a referral code which gives referral credits to [@mittalyashu](https://github.com/mittalyashu).
