--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -10,7 +10,7 @@ icon: FileText
 
 LogChimp is an open-source software for capturing your customers' feedback and informing your product decisions.
 
-![LogChimp homepage](../images/docs/logchimp_homepage.png)
+![LogChimp homepage](/images/docs/logchimp_homepage.png)
 
 ## Quick Start
 
