--- a/docs/what-is-logchimp.mdx
+++ b/docs/what-is-logchimp.mdx
@@ -7,7 +7,7 @@ LogChimp is an open-source software built from Startups to Enterprises who need 
 
 LogChimp is designed to fit and scale with your existing system by providing a unified API, feedback widget _(coming soon)_ component that can be integrated with few lines of code.
 
-![LogChimp homepage](../images/docs/logchimp_homepage.png)
+![LogChimp homepage](/images/docs/logchimp_homepage.png)
 
 ## Quick Start
 
