--- a/guide/boards/index.mdx
+++ b/guide/boards/index.mdx
@@ -3,7 +3,7 @@ title: Overview
 description: Organize your customers feedback with boards
 ---
 
-<img src="../../images/guide/boards.webp" alt="Boards" className="rounded-2xl border" />
+<img src="/images/guide/boards.webp" alt="Boards" className="rounded-2xl border" />
 
 ## Overview
 
