--- a/guide/dashboard/index.mdx
+++ b/guide/dashboard/index.mdx
@@ -3,7 +3,7 @@ title: Overview
 icon: PanelsTopLeft
 ---
 
-<img src="../../images/guide/dashboard.webp" alt="Dashboard" className="rounded-2xl border"/>
+<img src="/images/guide/dashboard.webp" alt="Dashboard" className="rounded-2xl border"/>
 
 The dashboard is your home in LogChimp and where all the post, board, roadmap and interactions live. Within the dashboard, you can create boards, manage roadmap, assign roles and more.
 
