--- a/guide/setup/site.mdx
+++ b/guide/setup/site.mdx
@@ -3,6 +3,6 @@ title: Site
 slug: /guide/setup/site
 ---
 
-<img src="../../images/guide/logchimp-site-homepage.webp" alt="LogChimp site homepage" className="rounded-2xl border" />
+<img src="/images/guide/logchimp-site-homepage.webp" alt="LogChimp site homepage" className="rounded-2xl border" />
 
 ## Site
