docs: update render.mdx installation guide

--- a/content/docs/install/railway.mdx
+++ b/content/docs/install/railway.mdx
@@ -27,7 +27,7 @@ This template will auto-provision the following services for you:
 2. LogChimp API service
 3. LogChimp Theme service
 
-You can always customise the secret keys and other environment variables.
+You can always customize the secret keys and other environment variables.
 
 Railway provides an easy way to generate a 32-character secret key by pressing `Command + K` (on MacOS) or `Ctrl + K` (on Windows). Of course, you can provide your own secret key as well.
 
